--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -9,9 +9,14 @@ repositories {
 }
 
 dependencies {
+    // Google JSON 라이브러리
+    implementation 'com.google.code.gson:gson:2.10.1'
+  
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 
     implementation 'com.google.guava:guava:31.1-jre'
+    //JSON
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 java {
