--- a/myapp/settings.gradle
+++ b/myapp/settings.gradle
@@ -13,4 +13,7 @@ plugins {
 }
 
 rootProject.name = 'myapp'
-include('app')
+// include('app')
+include('app-client')
+include('app-server')
+include('app-common')
