--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -98,14 +98,17 @@ implementation 'com.drewnoakes:metadata-extractor:2.18.0'
   // Mybastis를 Spring과 연동할 때 사용할 라이브러리
   // implementation 'org.mybatis:mybatis-spring:2.0.6'
 
-  // MariaDB JDBC 드라이버
+   //MariaDB JDBC 드라이버
   implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
 
-  // Oracle JDBC Driver
-  //   implementation 'com.oracle.database.jdbc:ojdbc11-production:21.7.0.0'
+   //Oracle JDBC Driver
+     implementation 'com.oracle.database.jdbc:ojdbc11-production:21.7.0.0'
     
-  // MSSQL JDBC Driver
-  //   implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.0.jre17'
+   //MSSQL JDBC Driver
+     implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.0.jre17'
+  
+  // MySQL JDBC
+  implementation 'mysql:mysql-connector-java:8.0.33'
   
   // Google JSON 라이브러리
   implementation 'com.google.code.gson:gson:2.10.1'
