--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'application'
     id 'eclipse'
@@ -9,23 +8,25 @@ repositories {
 }
 
 dependencies {
-
-    
-    implementation 'org.mybatis:mybatis:3.5.13'
-// 서브 프로젝트의 클래스를 사용하기
+    // 서브 프로젝트의 클래스를 사용하기
     implementation project(':app-common')
     
-      // MySQL JDBC Driver
-  implementation 'mysql:mysql-connector-java:8.0.33'
-  
+    // MySQL JDBC Driver
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    
     // Google JSON 라이브러리
     implementation 'com.google.code.gson:gson:2.10.1'
   
+    // Mybatis 라이브러리
+    implementation 'org.mybatis:mybatis:3.5.13'
+  
+    // Reactor Netty 프레임워크
+    implementation platform('io.projectreactor:reactor-bom:2022.0.9') 
+    implementation 'io.projectreactor.netty:reactor-netty-core' 
+    implementation 'io.projectreactor.netty:reactor-netty-http'
+  
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
     implementation 'com.google.guava:guava:31.1-jre'
-    //JSON
-    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 java {
