--- a/myapp/app-server/src/main/resources/bitcamp/myapp/config/jdbc.properties
+++ b/myapp/app-server/src/main/resources/bitcamp/myapp/config/jdbc.properties
@@ -1,5 +1,5 @@
-#jdbc.properties
+# jdbc.properties
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.Url=jdbc:mysql://localhost:3306/studydb
+jdbc.url=jdbc:mysql://localhost:3306/studydb
 jdbc.username=study
 jdbc.password=1111
