--- a/myapp/app-common/build.gradle
+++ b/myapp/app-common/build.gradle
@@ -1,7 +1,6 @@
-
 plugins {
     id 'java-library'
-    id 'eclipse'
+    id 'eclipse-wtp'
 }
 
 repositories {
@@ -13,10 +12,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
   
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
     implementation 'com.google.guava:guava:31.1-jre'
-    //JSON
-    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 java {
