--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.5.13'
   
     // Servlet API 
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
+    // providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
         
     // multipart/form-data 처리 라이브러리
     //implementation 'commons-fileupload:commons-fileupload:1.5' // Servlet API 로 대체    
