--- a/servlet-app/app/src/main/webapp/WEB-INF/web.xml
+++ b/servlet-app/app/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-  version="4.0"
-  metadata-complete="false">
+         version="4.0"
+         metadata-complete="false">
 
   <!-- 컨텍스트 초기화 파라미터 등록 -->
   <context-param>
@@ -16,23 +16,22 @@
     <param-value>오호라!</param-value>
   </context-param>
   <context-param>
-    <param-name>jdbc.driver</param-name>
+    <param-name>jdbc2.driver</param-name>
     <param-value>aaa</param-value>
   </context-param>
   <context-param>
-    <param-name>jdbc.url</param-name>
+    <param-name>jdbc2.url</param-name>
     <param-value>bbb</param-value>
   </context-param>
   <context-param>
-    <param-name>jdbc.username</param-name>
+    <param-name>jdbc2.username</param-name>
     <param-value>ccc</param-value>
   </context-param>
   <context-param>
-    <param-name>jdbc.password</param-name>
+    <param-name>jdbc2.password</param-name>
     <param-value>ddd</param-value>
   </context-param>
-
-<!-- 필터 객체 등록 -->
+  <!-- 필터 객체 등록 -->
   <!--
   <filter>
     <filter-name>ex06.f1</filter-name>
@@ -50,18 +49,17 @@
     <filter-name>ex06.f1</filter-name>
     <url-pattern>/ex06/*</url-pattern>
   </filter-mapping>
--->
-
+  -->
 
   <!-- 서블릿 객체 등록 -->
-  <!--  
+  <!--
   <servlet>
     <servlet-name>s1</servlet-name>
     <servlet-class>eomcs.servlet.ex01.Servlet01</servlet-class>
   </servlet>
   -->
   <!-- 서블릿에 경로 설정 -->
-  <!--  
+  <!--
   <servlet-mapping>
     <servlet-name>s1</servlet-name>
     <url-pattern>/ex01/first</url-pattern>
@@ -94,6 +92,10 @@
       <param-name>jdbc.username</param-name>
       <param-value>ccc</param-value>
     </init-param>
+    <init-param>
+      <param-name>jdbc.password</param-name>
+      <param-value>ddd</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
@@ -101,4 +103,13 @@
     <url-pattern>/ex06/s4</url-pattern>
   </servlet-mapping>
   -->
+
+  <servlet>
+    <servlet-name>ex12.s1</servlet-name>
+    <servlet-class>eomcs.servlet.ex12.Servlet01</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ex12.s1</servlet-name>
+    <url-pattern>/ex12/s1</url-pattern>
+  </servlet-mapping>
 </web-app>
