--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-   // id 'eclipse-wtp'
+    // id 'eclipse-wtp'
     id 'war'
 }
 
@@ -32,6 +32,9 @@ dependencies {
 
     // Amazon AWS Java SDK s3
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.530'
+
+    //JSTL 라이브러리
+    implementation 'jstl:jstl:1.2'
     
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     implementation 'com.google.guava:guava:31.1-jre'
@@ -52,6 +55,7 @@ tasks.withType(JavaCompile) {
     sourceCompatibility = '17'
     targetCompatibility = '17'
 }
+
 /*
 eclipse {
     project {
