--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     // JSTL 라이브러리
     implementation 'jstl:jstl:1.2'
 
+    // Jackson 라이브러리
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+
     // Spring WebMVC 라이브러리
     implementation 'org.springframework:spring-webmvc:5.3.29'
 
