--- a/spring-app/app/build.gradle
+++ b/spring-app/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     // Jackson ㄹㅏ이브러리
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 
     implementation 'com.google.guava:guava:28.2-jre'
     testImplementation 'junit:junit:4.12'
