--- a/spring-app/app/src/main/webapp/WEB-INF/web.xml
+++ b/spring-app/app/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-  version="4.0" metadata-complete="false">
+         version="4.0" metadata-complete="false">
 
-  <description>
-    스프링 Web MVC 프레임워크 예제 테스트
-  </description>
+    <description>
+        스프링 Web MVC 프레임워크 예제 테스트
+    </description>
 
-  <display-name>spring-app</display-name>
+    <display-name>spring-app</display-name>
 
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-  </welcome-file-list>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+    </welcome-file-list>
 
+    <!--
+    <error-page>
+        <location>/WEB-INF/jsp2/error.jsp</location>
+    </error-page>
+    -->
 </web-app>
 
 
